--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
     <head>
         <title>My Blog
         </title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
+        </script>
+        <script src="https://raw.github.com/jashkenas/coffee-script/master/extras/coffee-script.js" type="text/javascript">
+        </script>
+	<script src="main.coffee" type="text/coffeescript"></script>
     </head>
     <body>
         <h1>My Blog</h1>
